--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;400;600&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  height: 110vh;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
+body {
+  background-color: #0d192b;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.big-text {
+  font-family: "Barlow Semi Condensed";
+  font-weight: 600;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.medium-text {
+  font-family: "Barlow Semi Condensed";
+  font-weigth: 400;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.small-text {
+  font-family: "Barlow Semi Condensed";
+  font-weight: 300;
 }
